# zero2prod

./: .dockerignore  .env  .gitignore  Cargo.toml  Deployment_guide.md  Dockerfile  config.yaml  deploy-application.sh  deploy-foundation.sh  deploy.sh  teardown-application.sh  teardown-foundation.sh  teardown.sh  warm-shutdown.sh  warm-startup.sh
.aws/: config
.github/workflows/: general.yml  rust.yml
configuration/: minikube.yaml  production.yaml
container-scripts/: init-db-connection.sh  postgres-backup.sh  postgres-init.sh  postgres-restore.sh
k8s/: app-config.yaml  app.yaml  migration-job.yaml  namespace.yaml  postgres.yaml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
terraform/: ecs.tf  main.tf  outputs.tf  security.tf  terraform.tfvars  tfplan  variables.tf  versions.tf  vpc.tf
terraform/application/: backend.tf  destroy.tfplan  ecs.tf  main.tf  outputs.tf  secrets.tf  security.tf  tfplan  variables.tf
terraform/foundation/: backend.tf  destroy.tfplan  ecs.tf  efs.tf  main.tf  networking.tf  outputs.tf  security.tf  tfplan  variables.tf
terraform/warm-shutdown/: backend.tf  main.tf  outputs.tf  tfplan  variables.tf
tests/: health_check.rs  helpers.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
