[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
serde = { version = "1.0.115", features = ["derive"] }
config = { version = "0.14", default-features = false, features = ["yaml"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock", "serde"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
postgres-types = { version = "0.2", features = ["derive"] }
postgres = { version = "0.19", features = ["with-uuid-1", "with-chrono-0_4"] }

tokio-postgres = "0.7"
deadpool-postgres = "0.12"

unicode-segmentation = "1"
claims = "0.7"

validator = "0.18"
fake = "2.9"

[dependencies.reqwest]
version = "0.12"
features = ["json", "rustls-tls"]

[dev-dependencies]
wiremock = "0.6"
serde_json = "1"

